--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   },
   "homepage": "https://github.com/Rise-Vision/widget-image-folder",
   "devDependencies": {
-    "chai-as-promised": "^4.2.0",
+    "chai": "^2.1.2",
+    "chai-as-promised": "^4.3.0",
+    "del": "~1.1.1",
     "gulp": "~3.8.3",
     "gulp-bump": "~0.1.8",
-    "gulp-concat": "^2.2.0",
     "gulp-jshint": "~1.5.5",
     "gulp-minify-css": "0.3.4",
     "gulp-rename": "~1.2.0",
-    "gulp-rimraf": "^0.1.0",
     "gulp-sourcemaps": "^1.2.2",
     "gulp-uglify": "^0.3.1",
     "gulp-usemin": "0.3.7",
