--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "angular": "1.2.18",
     "angular-route": "1.2.18",
-    "rise-storage": "https://github.com/Rise-Vision/web-component-rise-storage.git#1.1.1",
+    "component-storage-selector": "https://github.com/Rise-Vision/component-storage-selector.git#1.0.1",
+    "rise-storage": "https://github.com/Rise-Vision/web-component-rise-storage.git#1.2.6",
     "rv-common-style": "https://github.com/Rise-Vision/common-style.git#1.1.12",
     "webcomponentsjs": "~0.7.11",
     "widget-common": "https://github.com/Rise-Vision/widget-common.git#0.1.12",
@@ -33,6 +34,7 @@
     "underscore": "~1.8.3"
   },
   "resolutions": {
-    "angular": "1.2.18"
+    "angular": "1.2.18",
+    "jquery": "~2.1.4"
   }
 }
